fixed arbiter box with buttons

--- a/public/main.css
+++ b/public/main.css
@@ -18,3 +18,10 @@
 #bet_desc{
   font-size: 1.25em;
 }
+
+/* #arbiter_button1 {
+  margin-left: 80px;
+} 
+#arbiter_button {
+  margin-left: 70px;
+} */
