removed timestamp from arbitrage tab

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -71,7 +71,7 @@
                 <div id="arbitration" class="col s12">
                   <%for(let i = 0; i < arbitrage.length; i++){%>
                     <div>
-                      <h6><a href='/competitions/<%=arbitrage[i].id%>'><%=arbitrage[i].title%></a></h6> ended: <%=arbitrage[i].updated_at%>
+                      <h6><a href='/competitions/<%=arbitrage[i].id%>'><%=arbitrage[i].title%></a></h6>
                       <%if(i < arbitrage.length-1){%>
                         <div class='divider'></div>
                       <%}%>
