--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
                 <div class = 'card-title'>
                   <%=pubComps[i].title%>
                 </div>
-                Pool: <%pubComps[i].pool%><br>
+                Pool: <%=pubComps[i].pool%><br>
                 Minimum bet: <%=pubComps[i].bet_min%>
               </div>
               <div class = 'card-action'>
