fixed filepath for materialize initialization file

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -87,5 +87,6 @@
     <script src ='materializeInit.js'></script>
   </main>
   <% include ./partials/footer.ejs%>
+  <script src ='../materializeInit.js'></script>
   </body>
 </html>
