--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,5 +57,6 @@
     </div>
   </main>
         <% include ./partials/footer.ejs%>
+        <script src ='../materializeInit.js'></script>
   </body>
 </html>
