--- a/views/login.ejs
+++ b/views/login.ejs
@@ -65,6 +65,7 @@
 
     <% include ./partials/footer.ejs%>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src ='../materializeInit.js'></script>
 </body>
 
 </html>
