--- a/views/winners.ejs
+++ b/views/winners.ejs
@@ -33,5 +33,6 @@
     </div>
   </main>
         <% include ./partials/footer.ejs%>
+        <script src ='../../materializeInit.js'></script>
   </body>
 </html>
