fixed private comp pool display

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
                 <div class = 'card-title'>
                   <%=privComps[i].title%>
                 </div>
-                Pool: <%privComps[i].pool%><br>
+                Pool: <%=privComps[i].pool%><br>
                 Minimum bet: <%=privComps[i].bet_min%>
               </div>
               <div class = 'card-action'>
